--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
-    <string name="twitter_key" translatable="false">your twitter key</string>
-    <string name="twitter_secret" translatable="false">your twitter secret</string>
+    <string name="twitter_key" translatable="false">93QQLrdvSFPhyP7C7xuWw</string>
+    <string name="twitter_secret" translatable="false">8eeRDpAMUam1VbtPRTtA8lHt5IhCPI2QMeP7PsN0kuQ</string>
 </resources>
